# VINS-Fusion

./: .gitignore
camera_models/: CMakeLists.txt
camera_models/include/camodocal/calib/: CameraCalibration.h
camera_models/include/camodocal/chessboard/: Chessboard.h
config/: vins_rviz_config.rviz
config/A3_5660/: cam0_pinhole.yaml  params.yaml
config/realsense_l515/: realsense_stereo_imu_config.yaml
loop_fusion/: CMakeLists.txt
loop_fusion/src/: keyframe.h  pose_graph_node.cpp
vins_estimator/: CMakeLists.txt
vins_estimator/launch/: l515.launch  vins_5660.launch  vins_car.launch
vins_estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/utility/: visualization.cpp
